<resources>
    <string name="app_name">RegisterApp</string>

    <string name="hint_full_name">Full Name</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="btn_register">Register</string>
    <string name="register_illustration">Gambar Register</string>
</resources>
