<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="24dp"
    android:background="@color/light_purple">

    <!-- Gambar Ilustrasi -->
    <ImageView
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:src="@drawable/register_illustration"
        android:layout_marginBottom="24dp"
        android:contentDescription="@string/register_illustration" />

    <!-- Full Name -->
    <EditText
        android:id="@+id/etFullName"
        android:hint="@string/hint_full_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/edittext_background"
        android:textColor="@color/black"
        android:textColorHint="#DDDDDD" />

    <!-- Username -->
    <EditText
        android:id="@+id/etUsername"
        android:hint="@string/hint_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/edittext_background"
        android:textColor="@color/black"
        android:textColorHint="#DDDDDD" />

    <!-- Password -->
    <EditText
        android:id="@+id/etPassword"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/edittext_background"
        android:textColor="@color/black"
        android:textColorHint="#DDDDDD" />

    <!-- Confirm Password -->
    <EditText
        android:id="@+id/etConfirmPassword"
        android:hint="Confirm Password"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/edittext_background"
        android:textColor="@color/black"
        android:textColorHint="#DDDDDD" />

    <!-- Tombol Register -->
    <Button
        android:id="@+id/btnRegister"
        android:text="@string/btn_register"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:background="@drawable/button_background" />

</LinearLayout>
